@@ -23,6 +23,7 @@ depth: 1
  * Officially recommend `fnm` over `nvm` in development documentation (LB (Ben) Johnston)
  * Mention the importance of passing `request` and `current_site` to `get_url` on the [performance](performance) documentation page (Jake Howard)
  * Run Python tests with coverage and upload coverage data to codecov (Sage Abdullah)
+ * Clean up duplicate JavaScript for the `escapeHtml` function (Jordan Rob)
 
 ### Bug fixes
 
